--- a/package.json
+++ b/package.json
@@ -7,13 +7,9 @@
     "npm": "6.14.12"
   },
   "scripts": {
-  "prestart": "npm install",
-  "start": "forever server.js",
-  "watch": "forever -w server.js"
-},
-  "engines": {
-  "node": "11.x"
-},
+    "start": "node index",
+    "start:dev": "nodemon index"
+  },
   "repository": "https://github.com/Katrina-Panina/ahj-hw-7.git",
   "author": "Katerina Panina <khomenko.kat@mail.ru>",
   "license": "MIT",
